# vibe-kanban

./: .gitignore  Cargo.toml  local-build.sh  run-local-logged.sh
crates/db/.sqlx/: query-71a38a188e7c909b76cb2de30de8c2e1da23721158677df158f8e2c604f55349.json  query-e4cc7c8598ab6b4977f1d7b007aa4837c121290069a78361ea5aefd43347fcce.json
crates/db/migrations/: 20260625000000_add_merge_commit_message_run_reason.sql
crates/db/src/models/: execution_process.rs  session.rs  workspace.rs
crates/executors/: Cargo.toml
crates/executors/src/executors/: claude.rs  codex.rs  qa_mock.rs
crates/executors/src/executors/claude/: background.rs  client.rs  protocol.rs  slash_commands.rs
crates/executors/src/executors/codex/: client.rs  normalize_logs.rs  slash_commands.rs
crates/local-deployment/src/: container.rs  lib.rs
crates/mcp/src/task_server/: handler.rs
crates/server/src/: main.rs
crates/server/src/routes/: execution_processes.rs
crates/services/src/services/: container.rs  diff_stream.rs  merge_commit.rs  mod.rs
crates/tauri-app/src/: main.rs
crates/utils/: Cargo.toml
crates/utils/src/: fs.rs  lib.rs  logging.rs  msg_store.rs
crates/workspace-manager/src/: workspace_manager.rs
crates/worktree-manager/src/: worktree_manager.rs
docs/superpowers/plans/: 2026-06-25-merge-commit-message-generation.md  2026-07-12-claude-background-task-continuation.md
docs/superpowers/specs/: 2026-06-25-merge-commit-message-generation-design.md  2026-07-12-claude-background-task-continuation-design.md
docs/workspaces/: slash-commands.mdx
shared/: types.ts
(+5 files in other folders)
